# lich

./: .gitignore  CMakeLists.txt  README.md  compile_protobuf.sh
lich/demo/mnist/: train.cc
lich/lib/: macros.h  math.cc  math.h
lich/proto/: filler_param.pb.cc  filler_param.pb.h  filler_param.proto  layer_param.pb.cc  layer_param.pb.h  layer_param.proto  net_param.pb.cc  net_param.pb.h  net_param.proto  solver_param.pb.cc  solver_param.pb.h  solver_param.proto
lich/src/: common.h  filler.h  layer.h  layer_factory.h  layer_param_builder.h  lich.h  net.cc  net.h  solver.h  solver_param_builder.h  tensor.cc  tensor.h
lich/src/layers/: data_layer.cc  data_layer.h  dense_layer.cc  dense_layer.h  embedding_layer.cc  embedding_layer.h  relu_layer.cc  relu_layer.h  sigmoid_cross_entropy_loss_layer.cc  sigmoid_cross_entropy_loss_layer.h  sigmoid_layer.cc  sigmoid_layer.h  softmax_cross_entropy_loss_layer.cc  softmax_cross_entropy_loss_layer.h  softmax_layer.cc  softmax_layer.h
lich/src/solvers/: sgd_solver.h
lich/test/: data_layer_test.cc  dense_layer_test.cc  dummy_data.txt  embedding_layer_test.cc  filler_test.cc  gradient_checker.h  math_test.cc  softmax_cross_entropy_loss_layer_test.cc  softmax_layer_test.cc  tensor_test.cc  test_main.h
